# p3-txn-sender

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  recipient.json  run.sh
ansible/: deploy_atlas_txn_sender.yml  deploy_p3_txn_sender.yml
ansible/install-rust/tasks/: main.yml
ansible/inventory/: hosts.yml
ansible/roles/haproxy-setup/templates/: haproxy.cfg.j2
ansible/roles/p3-txn-sender/files/: id.json
ansible/roles/p3-txn-sender/tasks/: deps.yml  install_service.yml
ansible/roles/p3-txn-sender/templates/: p3-txn-sender.service.j2
etc/: yellowstone-geyser.json
scripts/: run.sh
src/: errors.rs  grpc_geyser.rs  leader_tracker.rs  main.rs  p3_client.rs  paladin_tracker.rs  rpc_server.rs  static_leader.rs  transaction_store.rs  txn_sender.rs
tests/: README.md  full_e2e.rs  multiple_txs.rs  multiple_txs_by_cu.rs  multiple_txs_by_cu_mev.rs  multiple_txs_by_cu_sa.rs  multiple_txs_by_cu_sa_multiple.rs  multiple_txs_by_cu_sa_secondary.rs  multiple_txs_by_tips.rs  multiple_txs_by_tips_sa.rs  multiple_txs_by_tips_sa_mev.rs  multiple_txs_by_tips_sa_mev_multiple.rs  multiple_txs_mev_by_cu.rs  multiple_txs_mev_by_tips.rs  multiple_txs_mev_by_tips_sa.rs  multiple_txs_p3_by_cu.rs  setup.rs  simple.rs  simple_sa.rs  simple_test_rpc.rs  simple_with_cu.rs  simple_with_tip.rs  t.rs  test.rs
tests/keypairs/: tester1.json  tester2.json  tester3.json  tester4.json  tester5.json  validator-keypair.json  vote-account-keypair.json
tests/suite/: mod.rs  suite_client.rs  test_suite.rs
