[package]
name = "atlas_txn_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.20.1", features = ["server", "http-client", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "ansi"] }
figment = { version = "0.10.6", features = ["env", "test"] }
tonic = { version = "0.9.2", features = ["gzip", "tls", "tls-roots"] }
solana-client = "~2.2"
solana-transaction-status = "~2.2"
solana-sdk = "~2.2"
solana-rpc-client-api = "~2.2"
cadence = "0.29.0"
cadence-macros = "0.29.0"
tower = { version = "0.4.13", features = ["full"] }
anyhow = "1.0.80"
base64 = "0.21.6"
bincode = "1.3.3"
dashmap = "5.5.3"
futures = "0.3.24"
yellowstone-grpc-proto = "6.0.0"
yellowstone-grpc-client = "6.0.0"
rand = "0.8.5"
indexmap = "2.2.5"
enum_dispatch = "0.3.13"
solana-connection-cache = "2.2.7"

